# research-lead-generation-demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
app/pipeline/: excel_writer.py  extractor.py  model_selector.py  scoring.py
data/: sample_abstracts.json
prompts/: extraction_prompt.txt
